--- a/DiageoMDMWeb/src/main/webapp/admin/usuario/consultarUsuario.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/usuario/consultarUsuario.xhtml
@@ -21,30 +21,30 @@
                                      widgetVar="wvUsu" style="width: 90%" rendered="#{consultarUsuarioBean.verDetalle}"
                                      paginatorAlwaysVisible="false" rows="15"  paginator="true"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
-                            <p:column headerText="#{msg.usu_num_doc}" filterBy="#{usu.numDoc}" filterMatchMode="startsWith">
-                                <h:outputLabel value="#{usu.numDoc.toUpperCase()}"/>
+                            <p:column headerText="#{msg.usu_num_doc}" filterBy="#{usu.documentNumber}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{usu.documentNumber.toUpperCase()}"/>
                             </p:column>                        
-                            <p:column headerText="#{msg.usu_nombres}" filterBy="#{usu.nombres}" filterMatchMode="startsWith" sortBy="#{usu.nombres}">
-                                <h:outputLabel value="#{usu.nombres}"/>
+                            <p:column headerText="#{msg.usu_nombres}" filterBy="#{usu.nameUser}" filterMatchMode="startsWith" sortBy="#{usu.nameUser}">
+                                <h:outputLabel value="#{usu.nameUser}"/>
                             </p:column>
-                            <p:column headerText="#{msg.usu_apellidos}" filterBy="#{usu.apellidos}" filterMatchMode="startsWith" sortBy="#{usu.apellidos}">
-                                <h:outputLabel value="#{usu.apellidos}"/>
+                            <p:column headerText="#{msg.usu_apellidos}" filterBy="#{usu.lastName}" filterMatchMode="startsWith" sortBy="#{usu.lastName}">
+                                <h:outputLabel value="#{usu.lastName}"/>
                             </p:column>
-                            <p:column headerText="#{msg.mail}" filterBy="#{usu.correo}" filterMatchMode="startsWith">
-                                <h:outputLabel value="#{usu.correo.toLowerCase()}"/>
+                            <p:column headerText="#{msg.mail}" filterBy="#{usu.emailUser}" filterMatchMode="startsWith">
+                                <h:outputLabel value="#{usu.emailUser.toLowerCase()}"/>
                             </p:column>
-                            <p:column headerText="#{msg.usu_perfil}" filterMatchMode="exact" filterBy="#{usu.idPerfil.nombre}">
+                            <p:column headerText="#{msg.usu_perfil}" filterMatchMode="exact" filterBy="#{usu.profileId.nameProfile}">
                                 <f:facet name="filter">
                                     <p:selectOneMenu onchange="PF('wvUsu').filter()" >
                                         <f:selectItem itemLabel="#{msg.seleccion}" itemValue="#{null}" noSelectionOption="true"/>
-                                        <f:selectItems value="#{diageoApplicationBean.listaPerfiles}" var="per" itemValue="#{per.nombre}" itemLabel="#{per.nombre}"/>
+                                        <f:selectItems value="#{diageoApplicationBean.listaPerfiles}" var="per" itemValue="#{per.nameProfile}" itemLabel="#{per.nameProfile}"/>
                                     </p:selectOneMenu>
                                 </f:facet>
-                                <h:outputLabel value="#{usu.idPerfil.nombre.toUpperCase()}"/>
+                                <h:outputLabel value="#{usu.profileId.nameProfile.toUpperCase()}"/>
                             </p:column>
                             <p:column headerText="#{msg.usu_activo}" style="text-align: center">
-                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{usu.estado eq '0'}"/>
-                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{usu.estado eq '1'}"/>
+                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{usu.stateUser eq '0'}"/>
+                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{usu.stateUser eq '1'}"/>
                             </p:column>
                             <p:column>
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{consultarUsuarioBean.verDetalleUsuario(usu)}" style="color: blue" process="@this" update="@form"/>
@@ -55,31 +55,31 @@
                             <h:panelGrid columns="4" style="width: 70%" rendered="#{!consultarUsuarioBean.verDetalle}">
                                 <h:outputLabel value="#{msg.usu_nombres}"/>
                                 <h:panelGroup>
-                                    <p:inputText id="itNombres" label="#{msg.usu_nombres}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.nombres}" required="true"/>
+                                    <p:inputText id="itNombres" label="#{msg.usu_nombres}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.nameUser}" required="true"/>
                                     <p:message for="itNombres"/>
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.usu_apellidos}"/>
                                 <h:panelGroup>
-                                    <p:inputText id="itApellidos" label="#{msg.usu_apellidos}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.apellidos}" required="true"/>
+                                    <p:inputText id="itApellidos" label="#{msg.usu_apellidos}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.lastName}" required="true"/>
                                     <p:message for="itApellidos"/>
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.usu_tipo_doc}"/>                        
                                 <p:selectOneMenu style="width: 73%" label="#{msg.usu_tipo_doc}" value="#{consultarUsuarioBean.tipoDocumento}" converter="tipoDocConverter">
-                                    <f:selectItems value="#{diageoApplicationBean.listaTipoDocumento}" var="tiDoc" itemLabel="#{tiDoc.nombre}"/>
+                                    <f:selectItems value="#{diageoApplicationBean.listaTipoDocumento}" var="tiDoc" itemLabel="#{tiDoc.nameDocumentType}"/>
                                 </p:selectOneMenu>
                                 <h:outputLabel value="#{msg.usu_num_doc}"/>
                                 <h:panelGroup>
-                                    <p:inputText id="itNumDoc" label="#{msg.usu_num_doc}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.numDoc}" required="true"/>
+                                    <p:inputText id="itNumDoc" label="#{msg.usu_num_doc}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.documentNumber}" required="true"/>
                                     <p:message for="itNumDoc"/>
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.usu_correo}"/>
                                 <h:panelGroup>
-                                    <p:inputText id="itCorreo" label="#{msg.usu_correo}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.correo}" required="true"/>
+                                    <p:inputText id="itCorreo" label="#{msg.usu_correo}" style="width: 80%" value="#{consultarUsuarioBean.usuarioSeleccionado.emailUser}" required="true"/>
                                     <p:message for="itCorreo"/>
                                 </h:panelGroup>
                                 <h:outputLabel value="#{msg.usu_perfil}"/>                        
                                 <p:selectOneMenu style="width: 73%" label="#{msg.usu_perfil}" value="#{consultarUsuarioBean.perfil}" converter="perfilConverter">
-                                    <f:selectItems value="#{diageoApplicationBean.listaPerfiles}" var="per" itemLabel="#{per.nombre}"/>
+                                    <f:selectItems value="#{diageoApplicationBean.listaPerfiles}" var="per" itemLabel="#{per.nameProfile}"/>
                                 </p:selectOneMenu>
                                 <h:outputLabel value="#{msg.usu_activo}"/>           
                                 <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{consultarUsuarioBean.usuarioActivo}"/>
